# fabrikate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fabrikate/: __init__.py  context.py  distributions.py  reference_data.py  world.py
src/fabrikate.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fabrikate/generators/: company.py  person.py  product.py  transaction.py
src/fabrikate/locales/: __init__.py
src/fabrikate/locales/data/: ar_SA.py  de_DE.py  en_GB.py  en_NG.py  en_US.py  es_ES.py  fr_FR.py  hi_IN.py  ja_JP.py  ko_KR.py  pt_BR.py
tests/: test_fabrikate.py
