[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fabrikate"
version = "0.2.1"
description = "Generate contextually coherent mock data — people, companies, and transactions that actually make sense together."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Sai Aditya Datta Tipirneni", email = "saiadityatipirneni@gmail.com"}
]
keywords = ["mock", "fake", "data", "testing", "fixtures", "coherent", "fabrikate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest", "black", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/aditya36900/fabrikate"
Issues = "https://github.com/aditya36900/fabrikate/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]

